Add assisted transaction import
